--- a/css/startsida.css
+++ b/css/startsida.css
@@ -1,6 +1,6 @@
 body {
   display: grid;
-  margin: 30px;
+
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 10;
 }
@@ -9,9 +9,28 @@ header {
   grid-column: 1/5;
   text-align: center;
   grid-row: 3;
+  background-color: blueviolet;
 }
 
 h1 {
   color: aquamarine;
   justify-content: center;
+}
+
+.text1 {
+  grid-column: 1/2;
+  grid-row: 4/6;
+  justify-content: center;
+  margin: 20px;
+}
+
+.text2 {
+  grid-column: 2/3;
+  grid-row: 4/6;
+  margin: 20px;
+}
+.text3 {
+  grid-column: 3/4;
+  grid-row: 4/6;
+  margin: 20px;
 }
