--- a/css/startsida.css
+++ b/css/startsida.css
@@ -1,5 +1,6 @@
 body {
   display: grid;
+  background-color: blueviolet;
 
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 10;
@@ -9,7 +10,6 @@ header {
   grid-column: 1/5;
   text-align: center;
   grid-row: 3;
-  background-color: blueviolet;
 }
 
 h1 {
@@ -22,15 +22,57 @@ h1 {
   grid-row: 4/6;
   justify-content: center;
   margin: 20px;
+  background-color: white;
+  justify-content: space-evenly;
 }
 
 .text2 {
   grid-column: 2/3;
   grid-row: 4/6;
   margin: 20px;
+  background-color: white;
+  justify-content: space-evenly;
 }
 .text3 {
   grid-column: 3/4;
   grid-row: 4/6;
   margin: 20px;
+  background-color: white;
+  justify-content: space-evenly;
+}
+
+.text4 {
+  grid-column: 1/2;
+  grid-row: 6/8;
+  margin: 20px;
+  background-color: white;
+}
+
+.text5 {
+  grid-column: 2/3;
+  grid-row: 6/8;
+  margin: 20px;
+  background-color: white;
+}
+
+.text6 {
+  grid-column: 3/4;
+  grid-row: 6/8;
+  margin: 20px;
+  background-color: white;
+}
+h3 {
+  justify-content: center;
+}
+
+.button1 {
+  background-color: white;
+  display: inline-block;
+  color: aquamarine;
+  cursor: pointer;
+  text-decoration: none;
+  justify-content: center;
+}
+.button1:hover {
+  background-color: aquamarine;
 }
