--- a/css/stylequiz.css
+++ b/css/stylequiz.css
@@ -10,6 +10,7 @@ button {
   text-decoration: none;
   cursor: pointer;
   display: inline-block;
+  border: solid;
 }
 
 .question {
@@ -27,4 +28,8 @@ body {
 
 p {
   color: aquamarine;
+}
+nav a {
+  text-decoration: none;
+  color: black;
 }
